--- a/about.html
+++ b/about.html
@@ -184,14 +184,14 @@
                     <div class="fact-item bg-light rounded text-center h-100 p-5">
                         <i class="fa fa-users fa-4x text-primary mb-4"></i>
                         <h5 class="mb-3">Satisfied Clients</h5>
-                        <h1 class="display-5 mb-0" data-toggle="counter-up">1234</h1>
+                        <h1 class="display-5 mb-0" data-toggle="counter-up">852</h1>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="fact-item bg-light rounded text-center h-100 p-5">
                         <i class="fa fa-check fa-4x text-primary mb-4"></i>
                         <h5 class="mb-3">Projects Done</h5>
-                        <h1 class="display-5 mb-0" data-toggle="counter-up">1234</h1>
+                        <h1 class="display-5 mb-0" data-toggle="counter-up">1,379</h1>
                     </div>
                 </div>
             </div>
@@ -213,8 +213,8 @@
                     <div class="h-100">
                         <h6 class="section-title bg-white text-start text-primary pe-3">About Us</h6>
                         <h1 class="display-6 mb-4">#1 Digital Solution With <span class="text-primary">9 Years</span> Of Experience</h1>
-                        <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                        <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
+                        <p>Our mission is to help businesses like yours succeed in the digital landscape. We believe that every company deserves a website that accurately reflects their brand, values, and mission. That's why we're committed to delivering personalized, results-driven web solutions that exceed our clients' expectations. We stay ahead of the curve when it comes to the latest web trends and technologies. We believe that creativity is key to developing unique and effective web solutions. We operate with transparency, honesty, and integrity in all our interactions. We work closely with our clients to ensure that their needs are met and their goals are achieved.</p>
+                        <p class="mb-4">We focus on delivering measurable results that drive real business value.</p>
                         <div class="d-flex align-items-center mb-4 pb-2">
                             <img class="flex-shrink-0 rounded-circle" src="img/seo.jpg" alt="" style="width: 50px; height: 50px;">
                             <div class="ps-4">
@@ -239,7 +239,7 @@
                     <div class="h-100">
                         <h6 class="section-title bg-white text-start text-primary pe-3">Why Choose Us</h6>
                         <h1 class="display-6 mb-4">Why People Trust Us? Learn About Us!</h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                        <p class="mb-4">Our team has extensive experience in web development, design, and  maintenance, Stay up-to-date with the latest web technologies and trends. We tailor our web services to meet the unique needs of each client. Respond promptly to inquiries and concerns. Anticipate and address potential web issues before they become problems.  Prioritize the security and confidentiality of client data. Adhere to relevant web regulations and industry standards. We regularly update our web services to ensure the latest security patches and features. We have a history of delivering successful web projects. We provide clear metrics and reporting to demonstrate our impact.</p>
                         <div class="row g-4">
                             <div class="col-12">
                                 <div class="skill">
