--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
                         <a href="feature.html" class="dropdown-item">Features</a>
                         <a href="team.html" class="dropdown-item">Our Team</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
@@ -228,6 +228,8 @@
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Accra, Ghana</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+233 245 606 400</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>tetsolos@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>paswebagency@gmail.com</p>
+                    
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -268,7 +270,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p>Subscribe to our newsletter</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control bg-transparent border-secondary w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
