--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
                         <img class="img-fluid rounded" src="img/project 1.jpg" alt="">
                         <a href="img/project 1.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <h6>UI / Web Design</h6>
+                    <span>Ghana's Favorite Website Agency</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="02">
                     <div class="position-relative mb-4">
@@ -402,15 +402,15 @@
                         <a href="img/project 2.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
                     <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <span>Pas</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="03">
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded" src="img/project 3.jpg" alt="">
                         <a href="img/project 3.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <h6>Web Development</h6>
+                    <span>Best Design</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="04">
                     <div class="position-relative mb-4">
@@ -442,15 +442,15 @@
                         <a href="img/project 7.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
                     <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <span>E-commerce</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="08">
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded" src="img/project 8.jpg" alt="">
                         <a href="img/project 8.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <h6>UI / Web Development</h6>
+                    <span>Online Store</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="09">
                     <div class="position-relative mb-4">
@@ -458,7 +458,7 @@
                         <a href="img/project 9.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
                     <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <span>Digital Store</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="10">
                     <div class="position-relative mb-4">
@@ -466,7 +466,7 @@
                         <a href="img/project 10.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
                     <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <span>Online Store</span>
                 </div>
             </div>
         </div>
@@ -598,6 +598,7 @@
                     <h5 class="text-light mb-4">Address</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Accra, Ghana</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+233 245 606 400</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>paswebagency@gmail.com</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>tetsolos@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
