--- a/project.html
+++ b/project.html
@@ -135,7 +135,7 @@
                         <a href="feature.html" class="dropdown-item">Features</a>
                         <a href="team.html" class="dropdown-item">Our Team</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact Us</a>
@@ -175,8 +175,8 @@
                         <img class="img-fluid rounded" src="img/project 1.jpg" alt="">
                         <a href="img/project 1.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <h6>Web Design</h6>
+                    <span>Ghana's Favorite Website Agency</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="02">
                     <div class="position-relative mb-4">
@@ -223,16 +223,16 @@
                         <img class="img-fluid rounded" src="img/project 7.jpg" alt="">
                         <a href="img/project 7.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <h6>Web Design</h6>
+                    <span>Digital Store</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="08">
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded" src="img/project 8.jpg" alt="">
                         <a href="img/project 8.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <h6>UI / Web development</h6>
+                    <span>Online Store</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="09">
                     <div class="position-relative mb-4">
