--- a/index.html
+++ b/index.html
@@ -296,25 +296,25 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <a class="service-item d-block rounded text-center h-100 p-4" href="">
                         <img class="img-fluid rounded mb-4" src="img/service 3.jpg" alt="">
-                        <h4 class="mb-0">SEO Optimization</h4>
+                        <h4 class="mb-0">Cloud Hosting</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <a class="service-item d-block rounded text-center h-100 p-4" href="">
                         <img class="img-fluid rounded mb-4" src="img/service 4.jpg" alt="">
-                        <h4 class="mb-0">Social Marketing</h4>
+                        <h4 class="mb-0">E-commerce</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <a class="service-item d-block rounded text-center h-100 p-4" href="">
                         <img class="img-fluid rounded mb-4" src="img/service 5.jpg" alt="">
-                        <h4 class="mb-0">Email Marketing</h4>
+                        <h4 class="mb-0">Online Store</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <a class="service-item d-block rounded text-center h-100 p-4" href="">
                         <img class="img-fluid rounded mb-4" src="img/service 6.jpg" alt="">
-                        <h4 class="mb-0">PPC Advertising</h4>
+                        <h4 class="mb-0">Digital Store</h4>
                     </a>
                 </div>
             </div>
