--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <a class="service-item d-block rounded text-center h-100 p-4" href="">
                         <img class="img-fluid rounded mb-4" src="img/service 5.jpg" alt="">
-                        <h4 class="mb-0">Online Store</h4>
+                        <h4 class="mb-0">UI</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
