--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <img class="w-100" src="img/front1.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-4 animated zoomIn">We Are Leader In</h4>
+                            <h4 class="text-white text-uppercase mb-4 animated zoomIn">We Are Leaders</h4>
                             <h1 class="display-1 text-white mb-0 animated zoomIn">Creative & Innovative Digital Solution</h1>
                         </div>
                     </div>
