--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="carousel-caption">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-4 animated zoomIn">We Are Leaders</h4>
-                            <h1 class="display-1 text-white mb-0 animated zoomIn">Creative & Innovative Digital Solution</h1>
+                            <h1 class="display-1 text-white mb-0 animated zoomIn">In Terms of Creativity</h1>
                         </div>
                     </div>
                 </div>
@@ -174,8 +174,8 @@
                     <img class="w-100" src="img/front2.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-4 animated zoomIn">We Are Leader In</h4>
-                            <h1 class="display-1 text-white mb-0 animated zoomIn">Creative & Innovative Digital Solution</h1>
+                            <h4 class="text-white text-uppercase mb-4 animated zoomIn">We Are Leaders</h4>
+                            <h1 class="display-1 text-white mb-0 animated zoomIn">In Web Development</h1>
                         </div>
                     </div>
                 </div>
@@ -183,8 +183,8 @@
                     <img class="w-100" src="img/front3.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-4 animated zoomIn">We Are Leader In</h4>
-                            <h1 class="display-1 text-white mb-0 animated zoomIn">Creative & Innovative Digital Solution</h1>
+                            <h4 class="text-white text-uppercase mb-4 animated zoomIn">We Are Leaders</h4>
+                            <h1 class="display-1 text-white mb-0 animated zoomIn">In Clouds</h1>
                         </div>
                     </div>
                 </div>
